k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app-api-svc
spec:
  selector:
    app: weather-app-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
