k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/weather
        pathType: Prefix
        backend:
          service:
            name: weather-app-api-svc
            port:
              number: 8080
